# wms-rs

./: .env.example  Cargo.toml  README.md  test.sh
wms-cli/: .env.example  Cargo.toml  README.md
wms-cli/src/: config.rs  main.rs
wms-cli/src/commands/: inventory.rs  mod.rs  order.rs  system.rs
wms-db/: Cargo.toml  README.md
wms-db/migrations/: 001_initial.sql  002_create_orders.sql
wms-db/src/: lib.rs
wms-planner/: Cargo.toml  README.md
wms-planner/src/: lib.rs  types.rs
wms-planner/src/planner/: greedy.rs  mod.rs  traits.rs
wms_core/: Cargo.toml
wms_core/src/: main.rs
