[package]
name = "wms-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wms-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }