[package]
name = "wms-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono"] }
tokio = { version = "1.25", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.3"

[dev-dependencies]
tokio-test = "0.4"
