[package]
name = "wms_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wms-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.3", features = ["v4"] }
wms-db = { path = "../wms-db" }

[dev-dependencies]
tokio-test = "0.4"
